--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
     "ag-grid-react": "^26.2.0",
     "bootstrap": "^5.1.3",
     "date-fns": "^2.27.0",
+    "moment": "^2.29.1",
     "react": "^17.0.2",
     "react-bootstrap": "^2.0.3",
     "react-dom": "^17.0.2",
+    "react-moment": "^1.1.1",
     "react-router-dom": "^6.0.2",
     "react-scripts": "4.0.3",
     "web-vitals": "^1.1.2"
