--- a/package.json
+++ b/package.json
@@ -3,6 +3,17 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@devexpress/dx-react-core": "^2.7.6",
+    "@devexpress/dx-react-scheduler": "^2.7.6",
+    "@devexpress/dx-react-scheduler-material-ui": "^2.7.6",
+    "@emotion/react": "^11.7.0",
+    "@emotion/styled": "^11.6.0",
+    "@fortawesome/fontawesome-svg-core": "^1.2.36",
+    "@fortawesome/free-solid-svg-icons": "^5.15.4",
+    "@fortawesome/react-fontawesome": "^0.1.16",
+    "@mui/icons-material": "^5.2.1",
+    "@mui/material": "^5.2.2",
+    "@syncfusion/ej2-react-schedule": "^19.3.55",
     "@testing-library/jest-dom": "^5.16.0",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
@@ -10,13 +21,19 @@
     "ag-grid-react": "^26.2.0",
     "bootstrap": "^5.1.3",
     "date-fns": "^2.27.0",
+    "lodash": "^4.17.21",
+    "mdbreact": "^5.2.0",
     "moment": "^2.29.1",
     "react": "^17.0.2",
+    "react-big-calendar": "^0.38.1",
     "react-bootstrap": "^2.0.3",
+    "react-datepicker": "^4.5.0",
     "react-dom": "^17.0.2",
     "react-moment": "^1.1.1",
     "react-router-dom": "^6.0.2",
     "react-scripts": "4.0.3",
+    "recharts": "^2.1.6",
+    "save": "^2.4.0",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
