--- a/package.json
+++ b/package.json
@@ -9,8 +9,11 @@
     "@emotion/react": "^11.7.0",
     "@emotion/styled": "^11.6.0",
     "@fortawesome/fontawesome-svg-core": "^1.2.36",
+    "@fortawesome/free-brands-svg-icons": "^5.15.4",
     "@fortawesome/free-solid-svg-icons": "^5.15.4",
     "@fortawesome/react-fontawesome": "^0.1.16",
+    "@fullcalendar/daygrid": "^5.10.1",
+    "@fullcalendar/react": "^5.10.1",
     "@mui/icons-material": "^5.2.1",
     "@mui/material": "^5.2.2",
     "@syncfusion/ej2-react-schedule": "^19.3.55",
@@ -28,11 +31,15 @@
     "react-big-calendar": "^0.38.1",
     "react-bootstrap": "^2.0.3",
     "react-datepicker": "^4.5.0",
+    "react-datetime": "^3.1.1",
     "react-dom": "^17.0.2",
+    "react-modal": "^3.14.4",
     "react-moment": "^1.1.1",
     "react-router-dom": "^6.0.2",
     "react-scripts": "4.0.3",
+    "reactstrap": "^9.0.1",
     "recharts": "^2.1.6",
+    "sass": "^1.44.0",
     "save": "^2.4.0",
     "web-vitals": "^1.1.2"
   },
