--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://juusoee/github.io/personal_trainer",
   "name": "personal_trainer",
   "version": "0.1.0",
   "private": true,
@@ -24,6 +25,7 @@
     "ag-grid-react": "^26.2.0",
     "bootstrap": "^5.1.3",
     "date-fns": "^2.27.0",
+    "gh-pages": "^3.2.3",
     "lodash": "^4.17.21",
     "mdbreact": "^5.2.0",
     "moment": "^2.29.1",
@@ -46,6 +48,8 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
