--- a/package.json
+++ b/package.json
@@ -44,7 +44,9 @@
     "save": "^2.4.0",
     "web-vitals": "^1.1.2"
   },
-    "homepage": "https://juusoee/github.io/personal_trainer",
+  "engines":{
+    "node": "16.13.1"
+  },
 
   "scripts": {
     "start": "react-scripts start",
