--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "ag-grid-community": "^26.2.0",
     "ag-grid-react": "^26.2.0",
     "bootstrap": "^5.1.3",
+    "create-app-react": "^1.0.6",
     "date-fns": "^2.27.0",
     "gh-pages": "^3.2.3",
     "lodash": "^4.17.21",
@@ -44,10 +45,9 @@
     "save": "^2.4.0",
     "web-vitals": "^1.1.2"
   },
-  "engines":{
+  "engines": {
     "node": "16.13.1"
   },
-
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
