--- a/package.json
+++ b/package.json
@@ -46,7 +46,8 @@
     "web-vitals": "^1.1.2"
   },
   "engines": {
-    "node": "16.13.1"
+    "node": "16.13.1",
+    "npm": "8.1.2"
   },
   "scripts": {
     "start": "react-scripts start",
